fix: flex gap

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -27,6 +27,17 @@
   content: " ";
 }
 
+.landing-header > * {
+  margin-top: 1.25rem;
+  margin-left: 0;
+}
+
+@media screen and (min-width: 1024px) {
+  .landing-header > * {
+    margin-left: 1.25rem;
+  }
+}
+
 .logo-img {
   filter: invert(1);
   width: 9.5em;
@@ -171,4 +182,8 @@ p {
 
 .contact-tab-body {
   border-radius: 0 15px 15px 15px;
+}
+
+.faq-container > *:not(:first-child) {
+  margin-top: 1.5rem;
 }
